--- a/src/main/resources/templates/customManage.html
+++ b/src/main/resources/templates/customManage.html
@@ -12,7 +12,7 @@
             <button type="reset">초기화</button>
             <button type="button" onclick="location.href='/customRegister'">등록</button>
             <!--            <a class="btn btn-primary" href="/customRegister">등록</a>-->
-            <button type="button">수정</button>
+            <button type="button" onclick="location.href='/customInfo'">수정</button>
             <!--            <button>삭제</button>-->
         </div>
     </form>
