modified source -CustomController -customInfo -CustomMapper

--- a/src/main/resources/templates/customInfo.html
+++ b/src/main/resources/templates/customInfo.html
@@ -76,7 +76,9 @@
             <button type="reset">초기화</button>
             <button type="submit" value="등록">등록</button>
             <button type="submit" value="수정">수정</button>
-            <button type="submit">삭제</button>
+            <form action="deleteCustom" method="post">
+                <button type="submit" value="삭제">삭제</button>
+            </form>
         </div>
         <div>
             <label for="busi_num">사업자번호<input id="busi_num" name="busi_num" type="text"></label>
