--- a/src/main/resources/templates/customRegister.html
+++ b/src/main/resources/templates/customRegister.html
@@ -140,12 +140,12 @@
             </div>
             <div>
                 <label>등록정보</label>
-                <input name="regi_info_man">
-                <input name="regi_info_date" type="text" readonly/>
+                <input name="regi_info_man" type="text">
+                <input name="regi_info_date" type="text" readonly/>)
             </div>
             <div>
                 <label>변경정보</label>
-                <input name="modi_info_man">
+                <input name="modi_info_man" type="text">
                 <input name="modi_info_date" type="text" readonly/>
             </div>
             <br>
@@ -158,9 +158,9 @@
                         <th>계좌번호</th>
                     </tr>
                     <tr>
-                        <td><input></td>
-                        <td><input></td>
-                        <td><input></td>
+                        <td><input type="text" name="factory"></td>
+                        <td><input type="text" name="trade_bank"></td>
+                        <td><input type="text" name="account_num"></td>
                     </tr>
                 </table>
             </div><!--거래처 계좌정보 table-->
